--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://kajoshorii.github.io/repo">Add to Cydia</a>
 	<a class="btn btn-sm btn-default" href="sileo://source/https://kajoshorii.github.io/repo">Add to Sileo</a>
     <a class="btn btn-sm btn-default" href="zbra://sources/add/https://kajoshorii.github.io/repo/">Add to Zebra</a>
-    <a class="btn btn-sm btn-default" href="https://t.ly/kajoshori" target = "_ blank">My Website</a>
+    <a class="btn btn-sm btn-default" href="https://bit.ly/kajoshori" target = "_ blank">My Website</a>
 	</div>
 </div>
 
