--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <div class="container" align="center">
 	<div class="well">
     <p>KajoShori's Repository</p>
-    <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://kajoshorii.github.io/repo">Add to Cydia</a>
-	<a class="btn btn-sm btn-default" href="sileo://source/https://kajoshorii.github.io/repo">Add to Sileo</a>
-    <a class="btn btn-sm btn-default" href="zbra://sources/add/https://kajoshorii.github.io/repo/">Add to Zebra</a>
+    <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://kajoshori.github.io/repo">Add to Cydia</a>
+	<a class="btn btn-sm btn-default" href="sileo://source/https://kajoshori.github.io/repo">Add to Sileo</a>
+    <a class="btn btn-sm btn-default" href="zbra://sources/add/https://kajoshori.github.io/repo/">Add to Zebra</a>
     <a class="btn btn-sm btn-default" href="https://bit.ly/kajoshori" target = "_ blank">My Website</a>
 	</div>
 </div>
