--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./CydiaIcon.jpg" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css.unlink">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -22,7 +23,7 @@
     <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://kajoshori.github.io/repo">Add to Cydia</a>
 	<a class="btn btn-sm btn-default" href="sileo://source/https://kajoshori.github.io/repo">Add to Sileo</a>
     <a class="btn btn-sm btn-default" href="zbra://sources/add/https://kajoshori.github.io/repo/">Add to Zebra</a>
-    <a class="btn btn-sm btn-default" href="https://bit.ly/kajoshori" target = "_ blank">My Website</a>
+    <a class="btn btn-sm btn-default" href="https://bit.ly/KajoShori" target = "_ blank">My Website</a>
 	</div>
 </div>
 
