--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 	<h1> KajoShori's Repository </h1>
 	<img src="shori.jpg" height="400px">
 </div>
-
+<br>
 <div class="container" align="center">
 	<div class="well">
-    <p>KajoShori's Repository</p>
+    <p>Click to add to Package Manager...!</p>
     <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://kajoshori.github.io/repo">Add to Cydia</a>
-	<a class="btn btn-sm btn-default" href="sileo://source/https://kajoshori.github.io/repo">Add to Sileo</a>
+    <a class="btn btn-sm btn-default" href="sileo://source/https://kajoshori.github.io/repo">Add to Sileo</a>
     <a class="btn btn-sm btn-default" href="zbra://sources/add/https://kajoshori.github.io/repo/">Add to Zebra</a>
+    <br><br>
+    <a class="btn btn-sm btn-default" href="https://kajoshori.github.io/">Homepage</a>
 	</div>
 </div>
 
