--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div class="container" align="center">
 	<div class="well">
     <p>Click to add to Package Manager...!</p>
+    <p>This repository for Jailbroken Apple Devices</p>
     <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://kajoshori.github.io/repo">Add to Cydia</a>
     <a class="btn btn-sm btn-default" href="sileo://source/https://kajoshori.github.io/repo">Add to Sileo</a>
     <a class="btn btn-sm btn-default" href="zbra://sources/add/https://kajoshori.github.io/repo/">Add to Zebra</a>
