--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>This repository for Jailbroken Apple Devices</p>
     <a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://kajoshori.github.io/repo">Add to Cydia</a>
     <a class="btn btn-sm btn-default" href="sileo://source/https://kajoshori.github.io/repo">Add to Sileo</a>
-    <a class="btn btn-sm btn-default" href="zbra://sources/add/https://kajoshori.github.io/repo/">Add to Zebra</a>
+    <a class="btn btn-sm btn-default" href="zbra://sources/add/https://kajoshori.github.io/repo/">Add to Zebra (Recommend)</a>
     <br><br>
     <a class="btn btn-sm btn-default" href="https://kajoshori.github.io/">Homepage</a>
 	</div>
